# bible-llm-from-scratch

./: .gitignore  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  TUTORIAL.md  bible_llm.py  download_bibles.py  download_correct_bibles.py  download_more_bibles.py  prepare_bible_corpus.py  pyproject.toml  requirements.txt  run_lesson.py  test_bible_tokenization.py  the_verdict.py
.claude/: settings.local.json
lessons/: CURRICULUM.md  README.md  lesson_01_exploring_data.py  lesson_02_tokenization.py  lesson_03_embeddings.py  lesson_04_attention.py  lesson_05_multihead_attention.py
