[project]
name = "bible-llm-from-scratch"
version = "0.1.0"
description = "Build a Large Language Model from scratch, trained on public domain English Bible translations"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "torch>=2.0.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
]

[tool.uv]
dev-dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
]

[tool.uv.workspace]
members = []
